# QtTheme

./: .gitignore  .gitmodules  CMakeLists.txt  QtTheme.html  QtTheme.js  README.md  index.html  sw.js
.github/workflows/: cmake-qt5.yml  cmake-qt6.yml
debian/: README.md  changelog  control  copyright  rules
debian/source/: options
demo/: main.cpp  mainwindow.cpp  mainwindow.h
demo/python/: download.py
demo/python/download/: main.py
demo/python/mediaplayer/: main.py
include/: QtTheme.h  ThemeManager.h
resource/: icon.qrc  theme.qrc
resource/theme/: Flat_Dark_Amber_Blue.qss  Flat_Dark_Amber_Brown.qss  Flat_Dark_Amber_Cyan.qss  Flat_Dark_Amber_DeepOrange.qss  Flat_Dark_Amber_DeepPurple.qss  Flat_Dark_Amber_Green.qss  Flat_Dark_Amber_Indigo.qss  Flat_Dark_Amber_LightBlue.qss  Flat_Dark_Amber_LightGreen.qss  Flat_Dark_Amber_Lime.qss  Flat_Dark_Amber_Orange.qss  Flat_Dark_Amber_Pink.qss  Flat_Dark_Amber_Purple.qss  Flat_Dark_Amber_Red.qss  Flat_Dark_Amber_Teal.qss  Flat_Dark_Amber_Yellow.qss  Flat_Dark_Blue_Amber.qss  Flat_Dark_Blue_Brown.qss  Flat_Dark_Blue_Cyan.qss  Flat_Dark_Blue_DeepOrange.qss  Flat_Dark_Blue_DeepPurple.qss  Flat_Dark_Blue_Green.qss  Flat_Dark_Blue_Indigo.qss  Flat_Dark_Blue_LightBlue.qss  Flat_Dark_Blue_LightGreen.qss  Flat_Dark_Blue_Lime.qss  Flat_Dark_Blue_Orange.qss  Flat_Dark_Blue_Pink.qss  Flat_Dark_Blue_Purple.qss  Flat_Dark_Blue_Red.qss  Flat_Dark_Blue_Teal.qss  Flat_Dark_Blue_Yellow.qss  Flat_Dark_Brown_Amber.qss  Flat_Dark_Brown_Blue.qss  Flat_Dark_Brown_Cyan.qss  Flat_Dark_Brown_DeepOrange.qss  Flat_Dark_Brown_DeepPurple.qss  Flat_Dark_Brown_Green.qss  Flat_Dark_Brown_Indigo.qss  Flat_Dark_Brown_LightBlue.qss  (+504 more)
src/: QtTheme.h  ThemeConfigurator.cpp  ThemeConfigurator.h  ThemeManager.cpp  ThemeManager.h  ThemePreview.cpp  ThemePreview.h  ZipPacker.cpp  ZipPacker.h  main.cpp  mainwindow.cpp  mainwindow.h  utils.cpp  utils.h
src/QtTheme/: QtTheme.h  ThemeManager.cpp  ThemeManager.h
src/python/: README.md  pyproject.toml
src/python/QtTheme/PyQt5/: __init__.py
src/python/QtTheme/PyQt6/: __init__.py
src/python/QtTheme/PySide2/: __init__.py
src/python/QtTheme/PySide6/: __init__.py
src/resource/: QtTheme.qrc  font.qrc  icon.qrc  theme.qrc
src/resource/theme/Flat/Dark/Amber/: Blue.qss  Brown.qss  Cyan.qss  DeepOrange.qss  DeepPurple.qss  Green.qss  Indigo.qss  LightBlue.qss  LightGreen.qss  Lime.qss  Orange.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/Blue/: Amber.qss  Brown.qss  Cyan.qss  DeepOrange.qss  DeepPurple.qss  Green.qss  Indigo.qss  LightBlue.qss  LightGreen.qss  Lime.qss  Orange.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/Brown/: Amber.qss  Blue.qss  Cyan.qss  DeepOrange.qss  DeepPurple.qss  Green.qss  Indigo.qss  LightBlue.qss  LightGreen.qss  Lime.qss  Orange.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/Cyan/: Amber.qss  Blue.qss  Brown.qss  DeepOrange.qss  DeepPurple.qss  Green.qss  Indigo.qss  LightBlue.qss  LightGreen.qss  Lime.qss  Orange.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/DeepOrange/: Amber.qss  Blue.qss  Brown.qss  Cyan.qss  DeepPurple.qss  Green.qss  Indigo.qss  LightBlue.qss  LightGreen.qss  Lime.qss  Orange.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/DeepPurple/: Amber.qss  Blue.qss  Brown.qss  Cyan.qss  DeepOrange.qss  Green.qss  Indigo.qss  LightBlue.qss  LightGreen.qss  Lime.qss  Orange.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/Green/: Amber.qss  Blue.qss  Brown.qss  Cyan.qss  DeepOrange.qss  DeepPurple.qss  Indigo.qss  LightBlue.qss  LightGreen.qss  Lime.qss  Orange.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/Indigo/: Amber.qss  Blue.qss  Brown.qss  Cyan.qss  DeepOrange.qss  DeepPurple.qss  Green.qss  LightBlue.qss  LightGreen.qss  Lime.qss  Orange.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/LightBlue/: Amber.qss  Blue.qss  Brown.qss  Cyan.qss  DeepOrange.qss  DeepPurple.qss  Green.qss  Indigo.qss  LightGreen.qss  Lime.qss  Orange.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/LightGreen/: Amber.qss  Blue.qss  Brown.qss  Cyan.qss  DeepOrange.qss  DeepPurple.qss  Green.qss  Indigo.qss  LightBlue.qss  Lime.qss  Orange.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/Lime/: Amber.qss  Blue.qss  Brown.qss  Cyan.qss  DeepOrange.qss  DeepPurple.qss  Green.qss  Indigo.qss  LightBlue.qss  LightGreen.qss  Orange.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/Orange/: Amber.qss  Blue.qss  Brown.qss  Cyan.qss  DeepOrange.qss  DeepPurple.qss  Green.qss  Indigo.qss  LightBlue.qss  LightGreen.qss  Lime.qss  Pink.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/Pink/: Amber.qss  Blue.qss  Brown.qss  Cyan.qss  DeepOrange.qss  DeepPurple.qss  Green.qss  Indigo.qss  LightBlue.qss  LightGreen.qss  Lime.qss  Orange.qss  Purple.qss  Red.qss  Teal.qss  Yellow.qss
src/resource/theme/Flat/Dark/Purple/: Amber.qss  (+15 more)
tool/: deploy.sh  generate.py  palette.json  py.sh  topy.sh
tool/PWA/: index.html  manifest.json  registerSW.js
tool/template/: QtTheme.qrc  icon.qrc  theme.qrc
tool/template/theme/: Flat.qss
tool/template/theme/Flat/: QCheckBox.qss  QColumnView.qss  QComboBox.qss  QDateEdit.qss  QDateTimeEdit.qss  QDialog.qss  QDockWidget.qss  QDoubleSpinBox.qss  QGroupBox.qss  QHeaderView.qss  QLabel.qss  QLineEdit.qss  QListView.qss  QMainWindow.qss  QMenu.qss  QMenuBar.qss  QMessageBox.qss  QPlainTextEdit.qss  QProgressBar.qss  QPushButton.qss  QRadioButton.qss  QScrollBar.qss  QSizeGrip.qss  QSlider.qss  QSpinBox.qss  QSplitter.qss  QStatusBar.qss  QTabBar.qss  QTabWidget.qss  QTableView.qss  QTextEdit.qss  QTimeEdit.qss  QToolBar.qss  QToolBox.qss  QToolButton.qss  QToolTip.qss  QTreeView.qss  QWidget.qss  license.qss
(+320 files in other folders)
