[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QtTheme"
version = "1.0.0"
authors = [
  { name="Plan C", email="hubenchang0515@outlook.com" },
]
description = "Qt theme in pure qss"
readme = "README.md"
dependencies = [
    
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/hubenchang0515/QtTheme"
Issues = "https://github.com/hubenchang0515/QtTheme/issues"